Update ReverseLength.java
Mod: List.of